k8s/services/netbox/app/server/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: netbox
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
