k8s/services/netbox/app/server/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - netbox.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: netbox
          port: 80
