k8s/services/netbox/app/server/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: netbox.as212024.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox-server
                port:
                  name: http
  tls:
    - hosts:
        - netbox.as212024.net
      secretName: netbox-tls
